@@ -1,9 +1,10 @@
 Revision history for Whelk
 
 {{$NEXT}}
+	- Added Text::Levenshtein dependency and improved suggestions for unknown keys
 	- Added documentation for Whelk::Schema::Definition
 	- Added documentation for Whelk::OpenAPI
-	- Added Text::Levenshtein dependency and improved suggestions for unknown keys
+	- Added documentation for Kelp::Module::Whelk
 
 0.05 - 2024-07-06
 	- Framework no longer assumes resource is a subclass of Kelp, allowing custom base controllers
